# BRiCk

./: .gitignore  CHANGES.md  CONTRIBUTING.md  Makefile  README.md  _CoqProject.template
elpi-extra/: README.md  dune  dune-project  elpi-extra.opam
elpi-extra/accumulate_bug/: dune
elpi-extra/extra/: NES.v  add_predicate_command.v  dune  extra.v  unlocked.v
elpi-extra/extra/Command/: both.elpi  both.elpi.in  interp.elpi  interp.elpi.in  synterp.elpi  synterp.elpi.in
elpi-extra/extra/Program/: both.elpi.in  interp.elpi  interp.elpi.in  synterp.elpi  synterp.elpi.in
elpi-extra/extra/Tactic/: both.elpi  both.elpi.in  interp.elpi  interp.elpi.in  synterp.elpi  synterp.elpi.in
elpi-extra/tests/: dune  tc_command.v  tc_program.v  tc_tactic.v  test_attr.v  test_bool.v  test_command_utils.v  test_coq_utils.v  test_diag.v  test_ident.expected  test_ident.v  test_int.expected  test_int.v  test_list.expected  test_list.v  test_locate_all.expected  test_locate_all.v  test_option.expected  test_option.v  test_pair.expected  test_pair.v  test_try_reduce.v  test_type_error.v  test_unlocked.v
elpi-extra/tests/NES/: tc_command.v
ltac2-extra/: README.md  dune  dune-project  ltac2-extra.opam
ltac2-extra/cram/: README.md  dune  setup-tests.sh
ltac2-extra/plugin/: coqOptions.ml  dune  intMap.ml  misc.ml  structureUtil.ml  tac2constr.ml  tac2constr.mli  tacUtil.ml
ltac2-extra/tests/: constr.expected  control.expected  dune  intgraph.v  level_env.v  prelude.v  test1.expected  test1.v  test2.expected  test2.v  test_constr.v  test_control.v  test_int.v  test_level_env.v
ltac2-extra/theories/: dune  extra.v
ltac2-llm/: README.md  dune-project  ltac2-llm-plugin.opam  ltac2-llm.opam
ltac2-llm/plugin/: dune
ltac2-llm/theories/: dune
ltac2-logger/: README.md  dune  dune-project  ltac2-logger.opam
ltac2-logger/plugin/: dune  flags.ml  flags.mli  g_ext_flags.mlg  ltac2_format.ml  main.ml  output.ml
ltac2-logger/tests/: dune  setup-project.sh
ltac2-logger/theories/: dune  logger.v  test.v
ocaml-logger-lib/: dune-project  logger-lib.opam
ocaml-rocq-extra/: dune-project  rocq-extra.opam
ocaml-rocq-extra/src/: dune  extra_pattern.ml
ocaml-stdlib-extra/: dune-project  stdlib-extra.opam
ocaml-stdlib-extra/src/: JSON.ml  JSON.mli  buffer.ml  buffer.mli  cmdutil.ml  cmdutil.mli  dune  extra.ml  filename.ml  filename.mli  filepath.ml  filepath.mli  fileutil.ml  fileutil.mli  format.ml  format.mli  list.ml  list.mli  prelude.ml  prelude.mli  stream.ml  stream.mli  string.ml  string.mli  time.ml  time.mli
rocq-dune-tools/: .ocamlformat  README.md  dune-project  rocq-dune-tools.opam
rocq-dune-tools/lib/: dependency_graph.ml  dependency_graph.mli  dune  dune_file.ml  dune_file.mli  rewrite.ml  rewrite.mli  support.ml  tool.ml  tool.mli  workspace.ml  workspace.mli
rocq-dune-tools/tests/: dune
rocq-lens/: dune  dune-project  rocq-lens-elpi.opam  rocq-lens.opam
rocq-lens/Lens/: dune
rocq-lens/tests/: dune  setup-project.sh
rocq-ltac2-tc-dispatch/: README.md  dune-project  ltac2-tc-dispatch.opam
rocq-ltac2-tc-dispatch/examples/: crush.v  db.v  demo.v  dune  hints.v
rocq-ltac2-tc-dispatch/plugin/: dune  lookup.ml
rocq-ltac2-tc-dispatch/tests/: arguments.v  backtracking.v  dune  external.v  nested.v  simple.v  test_external.v
rocq-ltac2-tc-dispatch/theories/: crush_ext.v  dune  lookup.v
rocq-skylabs-brick/: README.md  dune-project  rocq-skylabs-brick.opam  setup-project.sh
rocq-skylabs-brick/test-cpp2v/: dune
rocq-skylabs-brick/tests/: compiler_provided.expected  compiler_provided.v  cpp_prog.expected  cpp_prog.v  cpp_prog_inline.expected  cpp_prog_inline.v  dune  field_notation.expected  field_notation.v  float_support.v  implicit_members.expected  implicit_members.v  operator_overloads.v  smart_parsing.v  spec_notation.expected  spec_notation.v  static_operator_overload.v  sub_module_with_implicits.v  type_notation.expected  wp_notation.expected  wp_notation.v
rocq-skylabs-cpp2v/: .gitignore  CMakeLists.txt  dune  dune-project  rocq-skylabs-cpp2v.opam
rocq-skylabs-cpp2v/include/: ClangPrinter.hpp  Logging.hpp  SpecCollector.hpp  ToCoq.hpp
rocq-skylabs-cpp2v/llvm-include/: DeclVisitorWithArgs.h
rocq-skylabs-cpp2v/src/: ClangPrinter.cpp  ModuleBuilder.cpp  PrePrint.cpp  PrintDecl.cpp  PrintExpr.cpp  PrintName.cpp  PrintStmt.cpp  PrintType.cpp  ToCoq.cpp  cpp2v.cpp
rocq-skylabs-cpp2v/tests/: setup-cpp2v.sh  setup-project.sh
rocq-skylabs-iris/: dune  dune-project  rocq-skylabs-iris.opam
rocq-skylabs-iris/theories/: dune
rocq-skylabs-prelude/: dune-project  rocq-skylabs-prelude.opam
rocq-skylabs-prelude/tests/: dune  setup-project.sh
rocq-skylabs-prelude/theories/: addr.v  avl.v  base.v  bitsN.v  bool.v  bytestring.v  bytestring_core.v  compare.v  dune  error.v  fin.v  fin_map_dom.v  fin_maps.v  fin_sets.v  finite.v  finite_prod.v  fun_maps.v  functions.v  gmap.v  hw_types.v  interrupts.v  lens.v  letstar.v  list.v  list_numbers.v  list_prop.v  listset_nodup.v  name.v  named_binder.v  notations.v  numbers.v  option.v  page.v  parray.v  parsec.v  prelude.v  pstring.v  pstring_string.v  relations.v  sets.v  (+9 more)
rocq-skylabs-rocq-internals/: dune-project  rocq-skylabs-rocq-internals.opam
rocq-skylabs-rocq-internals/plugin/: dune
rocq-tc-db-info/: dune  dune-project  rocq-tc-db-info.opam  tc-db-info-plugin.opam  tc-db-info.opam
rocq-tc-db-info/plugin/: dune  g_hint_commands.mlg  main.ml
rocq-tc-db-info/tests/: dune  setup-project.sh
rocq-tc-db-info/theories/: dune  tc_db_info.v
rocq-tools/: README.md  dune-project  rocq-tools.opam
rocq-tools/lib/: code_quality.ml  code_quality.mli  data.mli  globfield.ml  globfield.mli  globfs.mli  profile.mli
rocq-tools/scripts/: dune  hint-data-extract-all.sh  html-diff-all.sh  report.sh
rocq-tools/tests/: dune
rocq-upoly/: README.md  dune  dune-project  rocq-upoly.opam
rocq-upoly/upoly/: UTypes.v  base.v  dune  effects.v  id.v  list.v  listT.v  monoid.v  option.v  optionT.v  parsec.v  prod.v  reader.v  readerT.v  state.v  stateT.v  sum.v  trace.v  traceT.v  upoly.v  writer.v  writerT.v
(+978 files in other folders)
