(env
 (sl_timing
  (binaries
   (../rocq-tools/bin/rocq_perf.exe as rocq))
  (rocq
   (rocqdep_flags :standard -w +all)
   (flags (:standard %{read-lines:flags/coqc}))))
 ; Same, but without coqc_perf
 (_
  (rocq
   (rocqdep_flags :standard -w +all)
   (flags (:standard %{read-lines:flags/coqc})))))
