(lang dune 3.21)
(using rocq 0.11)
(name elpi-extra)

(generate_opam_files)

(maintainers
 "Jan-Oliver Kaiser <janno@skylabs-ai.com>")

(authors
 "David Swasey")

(license LicenseRef-BedRock)

(source (github SkyLabsAI/BRiCk))

(package
 (name elpi-extra)
 (synopsis "Extension of the (Rocq) Elpi standard library")
 (depends coq-stdlib coq-elpi ltac2-extra))

(subst disabled)
