(lang dune 3.22)
(using rocq 0.12)
(name elpi-extra)

(generate_opam_files)

(maintainers
 "Jan-Oliver Kaiser <janno@skylabs-ai.com>")

(authors
 "David Swasey")

(license LicenseRef-BedRock)

(source (github SkyLabsAI/BRiCk))

(package
 (name elpi-extra)
 (synopsis "Extension of the (Rocq) Elpi standard library")
 (depends rocq-stdlib rocq-elpi ltac2-extra))

(subst disabled)
