(lang dune 3.17)
(using coq 0.8)
(name ltac2-extra)

(generate_opam_files)

(maintainers
 "Jan-Oliver Kaiser <janno@skylabs-ai.com>"
 "Rodolphe Lepigre <rodolphe.lepigre@skylabs-ai.com>")

(authors
 "Jan-Oliver Kaiser <janno@skylabs-ai.com>"
 "Rodolphe Lepigre <rodolphe.lepigre@skylabs-ai.com>"
 "David Swasey")

(license LicenseRef-BedRock)

(source (github SkyLabsAI/BRiCk))

(package
 (name ltac2-extra)
 (synopsis "Extension of the Ltac2 standard library")
 (depends coq-core coq-stdlib stdlib-extra rocq-extra))

(subst disabled)
