(lang dune 3.22)
(using rocq 0.12)
(name ltac2-extra)

(generate_opam_files)

(license LicenseRef-LICENSE-BedRock)

(package
 (name ltac2-llm-plugin)
 (synopsis "Ltac2 plugin to access OpenAI bindings.")
 (depends rocq-core stdlib-extra))

(package
 (name ltac2-llm)
 (synopsis "Ltac2 OpenAI bindings.")
 (depends rocq-stdlib ltac2-llm-plugin))
(subst disabled)
