(lang dune 3.17)
(using coq 0.8)
(name ltac2-logger)

(generate_opam_files)

(maintainers
 "Rodolphe Lepigre <rodolphe.lepigre@skylabs-ai.com>"
 "Jan-Oliver Kaiser <janno@skylabs-ai.com>")

(authors
 "Rodolphe Lepigre <rodolphe.lepigre@skylabs-ai.com>"
 "Jan-Oliver Kaiser <janno@skylabs-ai.com>")

(license LicenseRef-BedRock)

(source (github SkyLabsAI/BRiCk))

(package
 (name ltac2-logger)
 (synopsis "Logging library for Ltac2 (Rocq theories)")
 (depends coq-core stdlib-extra rocq-extra logger-lib coq-stdlib ltac2-extra))

(subst disabled)
