(lang dune 3.21)
(name logger-lib)

(generate_opam_files)

(maintainers
 "Rodolphe Lepigre <rodolphe.lepigre@skylabs-ai.com>"
 "Jan-Oliver Kaiser <janno@skylabs-ai.com>")

(authors
 "Rodolphe Lepigre <rodolphe.lepigre@skylabs-ai.com>"
 "Jan-Oliver Kaiser <janno@skylabs-ai.com>")

(license LicenseRef-BedRock)

(source (github SkyLabsAI/BRiCk))

(package
 (name logger-lib)
 (synopsis "Generic logging library with efficient event recording")
 (depends
  stdlib-extra))

(subst disabled)
