(lang dune 3.21)
(name rocq-extra)

(generate_opam_files)

(maintainers
 "Jan-Oliver Kaiser <janno@skylabs-ai.com>"
 "Rodolphe Lepigre <rodolphe.lepigre@skylabs-ai.com>")

(authors
 "Jan-Oliver Kaiser <janno@skylabs-ai.com>"
 "Rodolphe Lepigre <rodolphe.lepigre@skylabs-ai.com>")

(license LicenseRef-BedRock)

(source (github SkyLabsAI/BRiCk))

(package
 (name rocq-extra)
 (synopsis "Extensions to the Coq API")
 (depends
  coq-core
  stdlib-extra))

(subst disabled)
