(lang dune 3.21)
(name stdlib-extra)

(generate_opam_files)

(maintainers
 "Rodolphe Lepigre <rodolphe.lepigre@skylabs-ai.com>"
 "Jan-Oliver Kaiser <janno@skylabs-ai.com>")

(authors
 "Rodolphe Lepigre <rodolphe.lepigre@skylabs-ai.com>"
 "Jan-Oliver Kaiser <janno@skylabs-ai.com>")

(license LicenseRef-BedRock)

(source (github SkyLabsAI/BRiCk))

(package
 (name stdlib-extra)
 (synopsis "Extension of the OCaml standard library")
 (depends
  (yojson (= 3.0.0))
  (mtime (= 2.1.0))))

(subst disabled)
