(lang dune 3.14)
(using coq 0.8)
(name rocq-lens)

(generate_opam_files)

(maintainers
 "Gregory Malecha <gregory@skylabs-ai.com>"
 "Paolo Giarrusso <paolo@skylabs-ai.com>")

(authors
 "Gregory Malecha <gregory@skylabs-ai.com>"
 "Paolo Giarrusso <paolo@skylabs-ai.com>")

(source (github SkyLabsAI/BRiCk))

(license LGPL-2.1-or-later)

(package
 (name rocq-lens)
 (synopsis "Generation of lenses for record datatypes")
 (depends
  rocq-core
  rocq-stdlib))

(package
 (name rocq-lens-elpi)
 (synopsis "Generation of lenses for record datatypes, Elpi backend")
 (depends
  rocq-lens
  coq-elpi))

(subst disabled)
