(lang dune 3.21)
(using rocq 0.11)
(name ltac2-tc-dispatch)

(generate_opam_files)

(maintainers
 "Gregory Malecha <gregory@skylabs-ai.com>")

(authors
 "Gregory Malecha <gregory@skylabs-ai.com>")

(license MIT)

(source (github SkyLabsAI/BRiCk))

(package
 (name ltac2-tc-dispatch)
 (synopsis "Typeclass-based lookup for Ltac2 functions")
 (depends coq-core coq-stdlib stdlib-extra rocq-extra ltac2-extra ltac2-logger))

(subst disabled)
