(lang dune 3.21)
(using rocq 0.11)
(name rocq-skylabs-brick)

(generate_opam_files)

(maintainers
 "Gregory Malecha <gregory@skylabs-ai.com>"
 "Paolo Giarrusso <paolo@skylabs-ai.com>"
 "Jan-Oliver Kaiser <janno@skylabs-ai.com>"
 "Simon Hudon <simon@skylabs-ai.com>"
 "Rodolphe Lepigre <rodolphe.lepigre@skylabs-ai.com>")

(authors
 "Gregory Malecha <gregory@skylabs-ai.com>"
 "Paolo Giarrusso <paolo@skylabs-ai.com>"
 "Jan-Oliver Kaiser <janno@skylabs-ai.com>"
 "Simon Hudon <simon@skylabs-ai.com>"
 "Rodolphe Lepigre <rodolphe.lepigre@skylabs-ai.com>"
 "Abhishek Anand"
 "Gordon Stewart"
 "David Swasey"
 "František Farka")

(license LicenseRef-BedRock)

(source (github SkyLabsAI/BRiCk))

(package
 (name rocq-skylabs-brick)
 (synopsis "Frontend and program logic for C++")
 (depends
  rocq-upoly
  coq-iris
  rocq-lens
  rocq-lens-elpi
  rocq-equations
  rocq-skylabs-prelude
  rocq-skylabs-iris
  (rocq-skylabs-cpp2v :with-test)
  coq-elpi))

(subst disabled)
