(lang dune 3.22)
(using rocq 0.12)
(name rocq-skylabs-brick)

(generate_opam_files)

(maintainers
 "Gregory Malecha <gregory@skylabs-ai.com>"
 "Paolo Giarrusso <paolo@skylabs-ai.com>"
 "Jan-Oliver Kaiser <janno@skylabs-ai.com>"
 "Simon Hudon <simon@skylabs-ai.com>"
 "Rodolphe Lepigre <rodolphe.lepigre@skylabs-ai.com>")

(authors
 "Gregory Malecha <gregory@skylabs-ai.com>"
 "Paolo Giarrusso <paolo@skylabs-ai.com>"
 "Jan-Oliver Kaiser <janno@skylabs-ai.com>"
 "Simon Hudon <simon@skylabs-ai.com>"
 "Rodolphe Lepigre <rodolphe.lepigre@skylabs-ai.com>"
 "Abhishek Anand"
 "Gordon Stewart"
 "David Swasey"
 "František Farka")

(license LicenseRef-BedRock)

(source (github SkyLabsAI/BRiCk))

(package
 (name rocq-skylabs-brick)
 (synopsis "Frontend and program logic for C++")
 (depends
  rocq-upoly
  rocq-iris
  rocq-lens
  rocq-lens-elpi
  rocq-equations
  rocq-skylabs-prelude
  rocq-skylabs-iris
  rocq-skylabs-cpp2v
  ; this package mostly does not depend on cpp2v, except
  ; that rocq-skylabs-brick/theories/lang/cpp/dune uses
  ; cpp2v's hash in build parser/plugin/cpp2v.v.
  ; TODO: make that a separate package.
  rocq-flocq
  coq-elpi))

(subst disabled)
