(lang dune 3.21)
(using rocq 0.11)
(name rocq-skylabs-cpp2v)

(generate_opam_files)

(maintainers
 "Gregory Malecha <gregory@skylabs-ai.com>")

(authors
 "Gregory Malecha <gregory@skylabs-ai.com>"
 "David Swasey"
 "Paolo Giarrusso <paolo@skylabs-ai.com>")

(license LicenseRef-BedRock)

(source (github SkyLabsAI/BRiCk))

(package
 (name rocq-skylabs-cpp2v)
 (synopsis "Code generator for BRiCk program logic for C++")
 (depends
  conf-clang))

(subst disabled)
