;
; Copyright (C) 2022-2024 BlueRock Security, Inc.
; All rights reserved.
;
; This software is distributed under the terms of the BedRock Open-Source License.
; See the LICENSE-BedRock file in the repository root for details.

(env
 (_
  (rocq
   (flags (:standard %{read-lines:flags/coqc}))
   (rocqdoc_flags %{read-lines:flags/coqdoc}))))
