(lang dune 3.21)
(using rocq 0.11)
(name rocq-skylabs-iris)

(generate_opam_files)

(maintainers
 "Gregory Malecha <gregory@skylabs-ai.com>"
 "Paolo Giarrusso <paolo@skylabs-ai.com>"
 "Jan-Oliver Kaiser <janno@skylabs-ai.com>"
 "Simon Hudon <simon@skylabs-ai.com>"
 "Rodolphe Lepigre <rodolphe.lepigre@skylabs-ai.com>")

(authors
 "Gregory Malecha <gregory@skylabs-ai.com>"
 "Paolo Giarrusso <paolo@skylabs-ai.com>"
 "Jan-Oliver Kaiser <janno@skylabs-ai.com>"
 "Simon Hudon <simon@skylabs-ai.com>"
 "Rodolphe Lepigre <rodolphe.lepigre@skylabs-ai.com>"
 "Hai Dang"
 "Abhishek Anand"
 "Gordon Stewart"
 "David Swasey"
 "František Farka")

(license LicenseRef-BedRock)

(source (github SkyLabsAI/BRiCk))

(package
 (name rocq-skylabs-iris)
 (synopsis "SkyLabs AI's extensions to Iris")
 (depends
  rocq-upoly
  coq-iris
  rocq-skylabs-prelude
  rocq-lens
  rocq-lens-elpi
  ltac2-extra
  coq-elpi))

(subst disabled)
