(lang dune 3.22)
(using rocq 0.12)
(name rocq-skylabs-prelude)

(generate_opam_files)

(maintainers
 "Gregory Malecha <gregory@skylabs-ai.com>"
 "Paolo Giarrusso <paolo@skylabs-ai.com>"
 "Jan-Oliver Kaiser <janno@skylabs-ai.com>"
 "Simon Hudon <simon@skylabs-ai.com>"
 "Rodolphe Lepigre <rodolphe.lepigre@skylabs-ai.com>")

(authors
 "Gregory Malecha <gregory@skylabs-ai.com>"
 "Paolo Giarrusso <paolo@skylabs-ai.com>"
 "Jan-Oliver Kaiser <janno@skylabs-ai.com>"
 "Simon Hudon <simon@skylabs-ai.com>"
 "Rodolphe Lepigre <rodolphe.lepigre@skylabs-ai.com>"
 "Hai Dang"
 "Abhishek Anand"
 "Gordon Stewart"
 "David Swasey"
 "František Farka")

(license LicenseRef-BedRock)

(source (github SkyLabsAI/BRiCk))

(package
 (name rocq-skylabs-prelude)
 (synopsis "SkyLabs AI's prelude (extensions to stdpp)")
 (depends
  rocq-upoly
  rocq-stdpp
  rocq-lens
  rocq-lens-elpi
  rocq-elpi
  ltac2-extra))

(subst disabled)
