(lang dune 3.17)
(using coq 0.8)
(name tc-db-info)

(generate_opam_files)

(maintainers
 "Jan-Oliver Kaiser <janno@skylabs-ai.com>"
 "Rodolphe Lepigre <rodolphe.lepigre@skylabs-ai.com>")

(authors
 "Jan-Oliver Kaiser <janno@skylabs-ai.com>"
 "Rodolphe Lepigre <rodolphe.lepigre@skylabs-ai.com>")

(source (github SkyLabsAI/BRiCk))

(license LicenseRef-BedRock)

(package
 (name tc-db-info-plugin)
 (synopsis "Plugin for analyzing hint databases")
 (depends coq-core rocq-skylabs-rocq-internals))

(package
 (name tc-db-info)
 (synopsis "Tools for analyzing hint databases")
 (depends coq-stdlib tc-db-info-plugin))

(subst disabled)
