(lang dune 3.17)
(using coq 0.8)
(name rocq-tc-db-info)

(generate_opam_files)

(maintainers
 "Jan-Oliver Kaiser <janno@skylabs-ai.com>"
 "Rodolphe Lepigre <rodolphe.lepigre@skylabs-ai.com>")

(authors
 "Jan-Oliver Kaiser <janno@skylabs-ai.com>"
 "Rodolphe Lepigre <rodolphe.lepigre@skylabs-ai.com>")

(source (github SkyLabsAI/BRiCk))

(license LicenseRef-BedRock)

(package
 (name rocq-tc-db-info)
 (synopsis "Rocq plugin and took for analyzing hint databases")
 (depends coq-core coq-stdlib rocq-skylabs-rocq-internals))

(subst disabled)
