(lang dune 3.21)
(name rocq-tools)

(generate_opam_files)

(maintainers
 "Rodolphe Lepigre <rodolphe.lepigre@skylabs-ai.com>"
 "Jan-Oliver Kaiser <janno@skylabs-ai.com>")

(authors
 "Rodolphe Lepigre <rodolphe.lepigre@skylabs-ai.com>"
 "Jan-Oliver Kaiser <janno@skylabs-ai.com>")

(license LGPL-2.1-only)

(source (github SkyLabsAI/BRiCk))

(package
 (name rocq-tools)
 (synopsis "Instrumentation for the Rocq compiler")
 (depends yojson camlzip))

(subst disabled)
