(lang dune 3.21)
(using rocq 0.11)
(name rocq-upoly)

(generate_opam_files)

(maintainers
 "Gregory Malecha <gregory@skylabs-ai.com>"
 "Jan-Oliver Kaiser <janno@skylabs-ai.com>"
 "Rodolphe Lepigre <rodolphe.lepigre@skylabs-ai.com>")

(authors
 "David Swasey"
 "Gregory Malecha <gregory@skylabs-ai.com>"
 "Jan-Oliver Kaiser <janno@skylabs-ai.com>"
 "Rodolphe Lepigre <rodolphe.lepigre@skylabs-ai.com>")

(license LGPL-2.1-only)

(source (github SkyLabsAI/BRiCk))

(package
 (name rocq-upoly)
 (synopsis "Extension to std++ Rocq library for universe polymorphic monads")
 (depends (coq-stdpp (or (>= dev.2024-02-09.0.cafd7113) (= dev)))))

(subst disabled)
