(include_subdirs qualified)

(coq.theory
 (name skylabs.elpi.extra)
 (package elpi-extra)
 (theories
  Stdlib
  elpi elpi_elpi elpi.apps.NES
  Ltac2 skylabs.ltac2.extra))

(rule
 (target dummy.v)
 (deps
  (:elpi_files (glob_files_rec *.elpi)))
 (action
  (with-stdout-to %{target}
   (run rocq_elpi_shafile %{elpi_files}))))

(install
 (files (glob_files_rec (*.elpi with_prefix coq/user-contrib/skylabs/elpi/extra/)))
 (section lib_root)
 (package elpi-extra))

(install
 (section bin)
 (files elpidep)
 (package elpi-extra))
