(include_subdirs qualified)

(rocq.theory
 (name skylabs_tests.elpi.extra)
 (theories
  skylabs.elpi.extra
  ; transitive dependencies
  Ltac2 Stdlib elpi elpi.apps.NES elpi.apps.NES.elpi elpi_elpi
  skylabs.ltac2.extra
 ))

(rule
 (target dummy.v)
 (deps (glob_files_rec *.elpi))
 (action
  (with-stdout-to %{target}
   (run rocq_elpi_shafile %{deps}))))
