(rocq.theory
 (name skylabs_brick.tests)
 (generate_project_file)
 (theories
  Stdlib
  Lens
  Lens.Elpi
  iris
  stdpp
  elpi
  elpi_elpi
  Ltac2
  skylabs.upoly
  skylabs.prelude
  skylabs.iris.extra
  skylabs.ltac2.extra
  skylabs.lang.cpp
  ; transitive dependencies
  Equations Equations.Prop Equations.Type Flocq elpi.apps.NES elpi.apps.NES.elpi
  elpi.apps.derive elpi.apps.derive.elpi elpi.apps.locker elpi.apps.locker.elpi
 ))
