(include_subdirs qualified)
(coq.theory
 (name skylabs.iris.extra)
 (package rocq-skylabs-iris)
 (theories
  ; skylabs.prelude deps
  Stdlib
  stdpp
  skylabs.upoly
  elpi elpi_elpi elpi.apps.locker elpi.apps.NES
  Lens Lens.Elpi
  Ltac2 skylabs.ltac2.extra
  ; skylabs.prelude deps end
  skylabs.prelude
  iris))
