(include_subdirs qualified)
(rocq.theory
 (name skylabs.iris.extra)
 (package rocq-skylabs-iris)
 (theories
  Stdlib
  stdpp
  skylabs.upoly
  elpi
  elpi_elpi
  elpi.apps.locker
  elpi.apps.NES
  Lens
  Lens.Elpi
  Ltac2
  skylabs.ltac2.extra
  skylabs.prelude
  iris
  ; transitive dependencies
  elpi.apps.NES.elpi elpi.apps.derive elpi.apps.derive.elpi
  elpi.apps.locker.elpi
 ))
