(include_subdirs qualified)
(rocq.theory
 (name skylabs.prelude)
 (package rocq-skylabs-prelude)
 (theories
  Stdlib
  stdpp
  skylabs.upoly
  elpi elpi_elpi elpi.apps.locker elpi.apps.NES
  Lens Lens.Elpi
  Ltac2 skylabs.ltac2.extra))

; Copy dependencies --- typically Elpi files needed for `From ⋯ Extra
; Dependency` --- into dune's build directory. Arrange for the dummy
; target to change with its dependencies (because a constant target
; might some day run afoul of dune's cache).
(rule
 (target dummy.v)
 (deps (glob_files_rec elpi/*.elpi))
 (action
  (with-stdout-to %{target}
   (run rocq_elpi_shafile %{deps}))))

(install
 (files
  (glob_files_rec (elpi/*.elpi with_prefix coq/user-contrib/skylabs/prelude/elpi/)))
 (section lib_root)
 (package rocq-skylabs-prelude))
