(rocq.theory
 (name Lens.Elpi)
 (generate_project_file)
 (theories
  Lens
  elpi
  elpi_elpi
  elpi.apps.derive
  ; transitive dependencies
  elpi.apps.derive.elpi
 )
 (package rocq-lens-elpi))

; Hack to ensure the rocq-elpi package is avalable. *)
(rule
 (targets dummy.v)
 (action (with-stdout-to %{targets} (echo "(* dummy file *)"))))
