(library
 (name rocq_skylabs_brick_plugin)
 (public_name rocq-skylabs-brick.plugin)
 (synopsis "Rocq plugin for the BRiCk C++ program logic")
 (flags :standard -rectypes -w -27)
 (inline_tests)
 (preprocess (pps ppx_inline_test))
 (libraries
  coq-core.vernac
  coq-core.plugins.ltac))

(rocq.pp (modules cpp2v_commands))
