(include_subdirs qualified)
(rocq.theory
 (name skylabs.lang.cpp)
 (package rocq-skylabs-brick)
 (plugins rocq-skylabs-brick.plugin)
 (theories
  Stdlib
  stdpp
  skylabs.upoly
  elpi
  elpi_elpi
  elpi.apps.locker
  elpi.apps.NES
  Lens
  Lens.Elpi
  Ltac2
  skylabs.ltac2.extra
  skylabs.prelude
  iris
  skylabs.iris.extra
  Equations
  Equations.Prop
  Equations.Type
  ; transitive dependencies
  Corelib elpi.apps.NES.elpi elpi.apps.derive elpi.apps.derive.elpi
  elpi.apps.locker.elpi
 ))
