(include_subdirs qualified)
(rocq.theory
 (name skylabs.lang.cpp)
 (package rocq-skylabs-brick)
 (modules (:standard \ parser.plugin.cpp2v_template))
 (plugins rocq-skylabs-brick.plugin)
 (theories
  Stdlib
  stdpp
  skylabs.upoly
  elpi
  elpi_elpi
  elpi.apps.locker
  elpi.apps.NES
  Lens
  Lens.Elpi
  Ltac2
  skylabs.ltac2.extra
  skylabs.prelude
  iris
  skylabs.iris.extra
  Equations
  Equations.Prop
  Equations.Type
  Flocq
  ; transitive dependencies
  Corelib elpi.apps.NES.elpi elpi.apps.derive elpi.apps.derive.elpi
  elpi.apps.locker.elpi
 ))

(subdir parser/plugin
 (rule
  (target cpp2v.v)
  (deps
   cpp2v_template.v
   (package rocq-skylabs-cpp2v))
  (action
   (with-stdout-to %{target}
    (bash "checksum=$(sha1sum %{bin:cpp2v} | cut -d' ' -f 1); sed \"s/PLACEHOLDER/${checksum}/g\" cpp2v_template.v")))))
