(include_subdirs qualified)
(rocq.theory
 (name skylabs.lang.cpp)
 (package rocq-skylabs-brick)
 (modules :standard)
 (plugins rocq-skylabs-brick.plugin)
 (generate_project_file)
 (theories
  Stdlib
  stdpp
  skylabs.upoly
  elpi
  elpi_elpi
  elpi.apps.locker
  elpi.apps.NES
  Lens
  Lens.Elpi
  Ltac2
  skylabs.ltac2.extra
  skylabs.prelude
  iris
  Flocq
  skylabs.iris.extra
  Equations
  Equations.Prop
  Equations.Type
  ; transitive dependencies
  elpi.apps.NES.elpi elpi.apps.derive elpi.apps.derive.elpi
  elpi.apps.locker.elpi
 ))

(subdir parser/plugin
 (rule
  (target cpp2v_version.v)
  (deps
   (package rocq-skylabs-cpp2v))
  (action
   (with-stdout-to %{target}
    (run %{bin:bin-hash} --rocq version %{bin:cpp2v})))))
